--- a/experiments/cis/node/k8s/worker-node.yaml
+++ b/experiments/cis/node/k8s/worker-node.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: cis-worker
-  namespace: default
+  namespace: chaos
 spec:
   restartPolicy: Never
   containers:
@@ -10,23 +10,25 @@ spec:
     image: localhost:5000/cispod:local
     args: ["4.1.5"]
     imagePullPolicy: Always
+    securityContext:
+      privileged: true
     volumeMounts:
-#    - mountPath: "/config/10-kubeadm.conf"
-#      name: kubelet-service
-    - mountPath: "/config/kubelet.conf"
-      name: kubelet-kubeconf
-    - mountPath: "/config/config.yaml"
-      name: kubelet-conf
+    - mountPath: "/kubelet-service"
+      name: kubelet-service
+    - mountPath: "/kubeadm"
+      name: kubeadm-dir
+    - mountPath: "/kubelet"
+      name: kubelet
   volumes:
-#      - name: kubelet-service
-#        hostPath:
-#            path: "/etc/systemd/system/kubelet.service.d/10-kubeadm.conf"
-#            type: File
-      - name: kubelet-kubeconf
+      - name: kubelet-service
         hostPath:
-            path: "/etc/kubernetes/kubelet.conf"
-            type: File
-      - name: kubelet-conf
+            path: "/etc/systemd/system/kubelet.service.d"
+            type: Directory
+      - name: kubeadm-dir
         hostPath:
-            path: "/var/lib/kubelet/config.yaml"
-            type: File
+          path: "/etc/kubernetes"
+          type: Directory
+      - name: kubelet
+        hostPath:
+            path: "/var/lib/kubelet"
+            type: Directory
